--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -60,8 +60,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 .header {
     background: url('../resources/img/bg-1.jpg');
     background-size: cover;
-    min-height: 80rem;
-    height: 100%;
+    min-height: 100vh;
     overflow: hidden;
 }
 .footer {
@@ -77,8 +76,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
     // background-color:rgba(255, 0, 0, 0.094);
 }
 section {
-    min-height: 60rem;
-    height: 100%;
+    min-height: 100vh;
 }
 .sidebar {
     position: absolute;
